replaces wayfarer gif with cropped version. fixes layering for project section, much cleaner and more organized now

--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ a:hover {
   padding-top: 75px;
   margin-bottom: 50%;
   position: relative;
+  /* border: 1px solid salmon; */
 }
 
 .work-left {
@@ -213,6 +214,7 @@ a:hover {
   display: inline;
   width: 65%;
   z-index: 4;
+  /* border: 1px solid yellow; */
 }
 
 .work-right {
@@ -225,11 +227,13 @@ a:hover {
   position: absolute;
   right: 0;
   z-index: 5;
+  /* border: 1px solid yellow; */
 }
 
 .project-img {
   width: 100%;
   filter: grayscale(100%);
+  z-index: 20;
 }
 
 .project-img:hover {
@@ -262,11 +266,12 @@ a:hover {
 }
 
 .work2-right {
-  padding-top: 130px;
+  padding-top: 100px;
   float: right;
   display: inline;
   width: 65%;
   z-index: 6;
+  /* border: 1px solid purple; */
 }
 
 .work2-left {
@@ -276,9 +281,10 @@ a:hover {
   width: 45%;
   text-align: left;
   position: absolute;
-  top: 600px;
+  top: 570px;
   left: 0;
   z-index: 7;
+  /* border: 1px solid purple; */
 }
 
 .project-desc2 {
@@ -287,4 +293,36 @@ a:hover {
   font-size: 14px;
   background-color: #1d1d1d;
   text-align: left;
+}
+
+#work2 {
+  width: 100%;
+  margin: auto;
+  margin-top: 77%;
+  padding-top: 75px;
+  margin-bottom: 50%;
+  position: relative;
+  /* border: 1px solid lightgreen; */
+}
+
+.work3-left {
+  padding-top: 40px;
+  float: left;
+  display: inline;
+  width: 65%;
+  z-index: 4;
+  /* border: 1px solid turquoise; */
+}
+
+.work3-right {
+  padding: 10px;
+  padding-top: 50px;
+  float: right;
+  display: inline;
+  width: 45%;
+  text-align: right;
+  position: absolute;
+  right: 0;
+  z-index: 5;
+  /* border: 1px solid orange; */
 }
